<resources>
    <string name="app_name">Task Manager</string>
    <string name="task_name">Task Name</string>
    <string name="task_details">Task Details</string>
    <string name="task_date_time">Task Date/Time</string>
    <string name="addTaskButton">addTaskButton</string>
    <string name="enter_a_new_task">Enter a new Task</string>
    <string name="create_new_task">Create new Task</string>
    <string name="save">Save</string>
    <string name="moreOptionsImageView">moreOptionsImageView</string>
    <string name="editTask">Edit</string>
    <string name="deleteTask">Delete</string>
    <string name="add_details_optional">Add Details [OPTIONAL]</string>
    <string name="date_time_optional">Date/Time [OPTIONAL]</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="searchTasks">Search</string>
    <string name="import_export_tasks">Import/Export Tasks</string>
    <string name="sign_out">Sign Out</string>
    <string name="editTaskTextView">Edit Task</string>
    <string name="sub_task_name">Sub Task Name</string>
    <string name="enter_a_new_sub_task">Enter a new Sub Task</string>
    <string name="no_sub_tasks">No Sub Tasks!</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_tasks">No Tasks!</string>
    <string name="or">OR</string>
    <string name="log_in">Log In</string>
    <string name="no_account">No Account?</string>
    <string name="sign_up">Sign up</string>
</resources>