<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/createNewTaskTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_new_task"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_a_new_task"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="15sp"
        app:backgroundTint="@android:color/holo_blue_dark" />

    <EditText
        android:id="@+id/enterTaskDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/add_details_optional"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="15sp"
        app:backgroundTint="@android:color/holo_blue_dark" />

    <EditText
        android:id="@+id/DateTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/date_time_optional"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:textSize="15sp"
        app:backgroundTint="@android:color/holo_blue_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dateTimePickerButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_date_range_24" />

        <Button
            android:id="@+id/saveTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

    </RelativeLayout>
</LinearLayout>